# Rustic-Zen

./: .gitlab-ci.yml  Cargo.toml  LICENCE  README.md
aabb_quadtree/: Cargo.toml
aabb_quadtree/src/: geom.rs  lib.rs
examples/: dawn.rs  laser-rainbow.rs
src/: colliderpool.rs  geom.rs  image.rs  lib.rs  material.rs  niave_rt.rs  object.rs  plumbing.rs  prng.rs  ray.rs  raytrace.rs  renderer.rs  sampler.rs  scene.rs  shaderpool.rs
src/spectrum/: cdf.rs  mod.rs  wavelength.rs
