[package]
name = "rustic-zen"
version = "0.0.2"
description = "Photon-Garden raytracer for creating artistic renderings"
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
repository = "https://gitlab.com/IGBC/rustic-zen"
keywords = ["zen", "photon", "garden", "HQZ", "raytracer"]
catagories = ["multimedia::images", "rendering"]
authors = ["SEGFAULT <fakespamtrap@gmail.com>"]

[dependencies]
pcg_rand = "0.10.1"
rand = "0.6.1"

[dev-dependencies]
png = "0.13.2"
rand = "0.6.1"